# yeaphone

./: .svnignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.in  yeaphone.1  yeaphone.lsm.in  yeaphone.spec.in
contrib/udev/: 99-yealink.rules
src/: Makefile.am  lpcontrol.c  lpcontrol.h  yeaphone.c  ylcontrol.c  ylcontrol.h  yldisp.c  yldisp.h  ylsysfs.c  ypconfig.c  ypconfig.h  ypmainloop.c  ypmainloop.h
