# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([yeaphone],[0.1.1],[treitmayr@yahoo.com])
AC_CONFIG_AUX_DIR(config)

AC_MSG_NOTICE([$PACKAGE_NAME-$PACKAGE_VERSION       A linphone frontend for external handset devices.])
AC_MSG_NOTICE([licensed under the terms of the General Public License (GPL)])

AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE


# Checks for programs.
AC_PROG_CC


# Checks for libraries.

PKG_CHECK_MODULES(LINPHONE,linphone >= 1.7.0,,exit)
AC_SUBST(LINPHONE_CFLAGS)
AC_SUBST(LINPHONE_LIBS)
AC_MSG_CHECKING([for liblinphone library path])
LINPHONE_LIBDIR=`$PKG_CONFIG --variable=libdir linphone`
AC_MSG_RESULT([$LINPHONE_LIBDIR])
AC_SUBST(LINPHONE_LIBDIR)

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC

AC_CHECK_HEADERS([fcntl.h limits.h stdlib.h string.h sys/time.h unistd.h],,exit)

save_cppflags=$CPPFLAGS
CPPFLAGS="$LINPHONE_CFLAGS $CPPFLAGS"
AC_CHECK_HEADERS([linphone/linphonecore.h],,exit)
CPPFLAGS=$save_cppflags

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME
AC_STRUCT_TM
AC_C_BIGENDIAN

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_MALLOC
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_STAT
AC_CHECK_FUNCS([select strchr strdup strrchr])

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
