## Process this file with automake to produce Makefile.in

# Program binary name
bin_PROGRAMS = yeaphone

# sources 
yeaphone_SOURCES = lpcontrol.c  yeaphone.c ylcontrol.h yldisp.h ypconfig.h lpcontrol.h  ylcontrol.c  yldisp.c ypconfig.c

# libraries
yeaphone_LDADD = -llinphone

# mark headers to include also in package
#EXTRA_DIST = talk.h
